syntax = "proto3";

package tokendb;

option go_package = "token-strike/tsp2p/server/DB";

import "protos/justifications/justifications.proto";
import "protos/lock/lock.proto";

// Block is struct of block in blockchain
message Block {
    // prev_block — hash of previous block 
    string prev_block = 1;
    // justifications — collection of one of justification structure with 
    // payload information.
    repeated Justification justifications = 2;
    // creation — date of block creation in unix time format
    int64 creation = 3;
    // state — hash of state structure containing locks, owners and meta token 
    // info
    string state = 4;
    // pkt_block_hash —  the hash of the most recent PKT block
    string pkt_block_hash = 5;
    // pkt_block_height — the height of the most recent PKT block
    int32 pkt_block_height = 6;
    // height — the current height of this TokenStrike chain
    uint64 height = 7;
    // signature — issuer ID, needed for validate. If signature incorrect block
    // is not valid
    string signature = 8;
}

// Owner contains information about the holders' wallets and their balances
message Owner {
    // holder_wallet — hash of wallet address of holder 
    string holder_wallet = 1;
    // count — number of tokens held on wallet
    int64 count = 2;
}

// Token contain information about token
message Token {
    // count — number of issued tokens;
    int64 count = 1;
    // expiration — number of PKT block after which the token expires
    int32 expiration = 2;
    // creation — date of token creation in unix time format
    int64 creation = 3;
    // issuer_pubkey — public key of issuer used for signing
    string issuer_pubkey = 4;
    // urls — set of urls for access to blockchain
    repeated string  urls = 5;
}

// State is a current state of blockchain
message State {
    // token — metadata about token
    Token token = 1;
    // owners — a set of structures with addresses and their balances
    repeated Owner owners = 2;
    // locks — set of lock structures 
    repeated lock.Lock locks = 3;
}

// Justification is a helper to use it in block
message Justification {
    oneof content {
        // lock — payload with lock
        justifications.LockToken lock = 1;
        // transfer — payload with transaction info
        justifications.TranferToken transfer = 2;
        // lock_over — payload with lock time over
        justifications.LockTimeOver lock_over = 3;
        // genesis — justification to initialize block chian
        justifications.Genesis genesis = 4;
    }
}